# custodian

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  custodian-save.json  design.md  main.py  pyproject.toml
.github/: AGENTIC_PLAYTEST.md
.github/agents/: custodian-diegesis-reviewer.md  custodian-playtest-implementer.md  custodian-review-adjudicator.md  custodian-simulation-truth-reviewer.md
.github/aw/: actions-lock.json
.github/workflows/: agentic-review-barrier.yml  agentic-review-watchdog.yml  ci.yml  custodian-diegesis-review.lock.yml  custodian-diegesis-review.md  custodian-simulation-truth-review.lock.yml  custodian-simulation-truth-review.md  playtest-fix-implementer.lock.yml  playtest-fix-implementer.md  playtest-review-adjudicator.lock.yml  playtest-review-adjudicator.md  playtest-review.lock.yml  playtest-review.md
docs/: launch-modes.md  original-idea.md  packaging-macos.md  project-reference.md  roadmap.md
docs/architecture/: ai-interpreter.md  engine-contracts.md  playtest-runner.md  project-operating-system.md  save-load.md  web-session-api.md
docs/game_mechanics/: cryostasis-viability.md  delegation-and-drift.md  endings.md  incidents.md  manual-familiarity.md  mission-clock.md  objectives-and-priority.md  opening-sequence.md  reactor-coolant.md  routing.md  (+2 more)
packaging/: app_entry.py  custodian.spec
tests/: test_agentic_review_state.cjs  test_app_shell.py  test_arka.py  test_arka_interpreter.py  test_cli.py  test_endings.py  test_engine.py  test_finalize_agentic_review.cjs  test_narrative.py  test_objectives.py  test_persistence.py  test_playtest.py  test_seeds.py  test_story.py  test_telemetry.py  test_ui_snapshot.py  test_web_server.py  test_web_session.py
tools/: agentic_review_state.cjs  finalize_agentic_review.cjs  playtest_runner.py
(+39 files in other folders)
