[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "custodian"
version = "0.1.0"
description = "A terminal MVP for a sci-fi horror game about delegation."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Alex Omand" }
]
dependencies = []

[project.scripts]
custodian = "custodian.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

