[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "custodian"
version = "0.1.0"
description = "A terminal MVP for a sci-fi horror game about delegation."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Alex Omand" }
]
dependencies = [
  "openai>=1.0.0",
]

[project.scripts]
custodian = "custodian.cli:main"
custodian-web = "custodian.web_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
custodian = ["web_static/*"]
